2004/02/19
	add
	1. SSH1 support
	fix
	1. better look of tray icon
	2. hide the window only when tray icon is enabled
	3. close qterm when there is no connection.

2003/11/09
	fix
	1. support for redhat's menu.
	2. some anony bug when move around the cursor
	3. fatal error when no schema selected
	4. save schema error in Windowz

2003/11/08
	add
	1. disable python when no python-dev detected
	2. qterm.pro for qmake use
	fix
	1. merge patch for BSD system
	2. one bug in QTermTextLine::getText
	
2003/11/07
	add
	1. schema support

2003/10/19
	fix
	1. Delete key send \x1b[3~

2003/10/18
	add
	1. version item added in qterm.cfg for checking compatibility
	fix
	1. copy text to both mouse key and clipboard
	2. port trayicon from Psi. now works in KDE3/GNOME2 and can
	be dynamically load/unload
	3. check if the string of system control script is empty
	4. mistake in getting the visibility of toolbars when window is hidden
	5. disable selection of SSH1/2 form AddressBook dialog

2003/10/16
	fix
	1. checking Python 2.3, 2.2
   
2003/9/27
	add
	1. play wave files using Arts, ESD, or external program.
	fix
	1. view->themes.
	2. display using variable fonts.

2003/7/7
	add
	1. QTermTelnet emit TSWRITED when called write(). Use this signal to
	restart antiIdle timer instead of mouse & key pressing
	
2003/7/6
	add
	1. extract python traceback info

2003/7/3
	fix
	1. CPU overload when copy article

2003/6/25
	fix
	1. Makefile error
	
	0.3.1 released
	
2003/6/21
	0.3.0 released

2003/6/3
	add
	1. tray icon

2003/5/30
	add
	1. python script support

2003/5/8
	fix
	1. font set from menu(toolbar) will override the antialias property

2003/4/16
	fix
	1. autoreply cant be enabled if not enabled in Setting
	
2003/4/12
	0.2.0 released

2003/4/7
	add
	1. varible in address book for autoreply
	2. support url format usr:pwd@addr:port
	fix
	1. problem when copy article at ytht.net

2003/4/2
	add
	1. strip out the whitespace when copy

2003/3/28
	add
	1. logo icon

2003/3/25
	add