@@ -12,7 +12,7 @@ AC_CONFIG_AUX_DIR(admin)
 AC_CANONICAL_SYSTEM 
 
 dnl Automake doc recommends to do this only here. (Janos)
-AM_INIT_AUTOMAKE(qterm,0.3.5)
+AM_INIT_AUTOMAKE(qterm,0.3.6)
 
 dnl KDE_SET_PREFIX
 
